Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16427

'lfs rmfid' does not print anything on error

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • 3
    • 9223372036854775807

      The "lfs rmfid" does not print anything useful or exit with a non-zero error code when passed bad arguments:

      # lfs rmfid --help
      # lfs rmfid foo
      # echo $?
      0
      

      It would make sense to handle "--help" to print the usage message, and should print an error and the usage message if a bad filesystem name/mountpoint argument is given or if a bad FID is passed (though it should continue to process all remaining FIDs on the command-line and exit with an error at the end).

            arshad512 Arshad Hussain
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: