lustre/include/lustre/lustreapi.h
@@ -515,6 +515,8 @@ int llapi_path2parent(const char *path, unsigned int linkno,
 int llapi_fd2parent(int fd, unsigned int linkno, struct lu_fid *parent_fid,
 		    char *name, size_t name_size);
 int llapi_rmfid(const char *path, struct fid_array *fa);
+int llapi_rmfid_at(int fd, struct fid_array *fa);
+int llapi_root_path_open(char *device, int *outfd);
 int llapi_chomp_string(char *buf);
 
 struct file_handle;
